--- a/css/style.css
+++ b/css/style.css
@@ -815,6 +815,7 @@ a {
   display: inline-block;
   width: 80px;
   margin-right: 10px;
+  margin-top: -3px;
   padding: 12px 14px 10px 30px;
   font-size: 17px;
   line-height: 18px;
@@ -2080,7 +2081,7 @@ input[type="radio"]:disabled + label {
   justify-content: flex-end; 
   align-items: center; 
   text-align: center;
-  margin-bottom: 19px;
+  margin-bottom: 20px;
   position: relative;
 }
 
@@ -2176,7 +2177,7 @@ input[type="radio"]:disabled + label {
 }
 
 .about-type h2 {
-  padding-top: 72px;
+  padding-top: 73px;
   font-weight: 400;
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
@@ -2195,7 +2196,7 @@ input[type="radio"]:disabled + label {
 }
 
 .about-type p:nth-child(3) {
-  letter-spacing: 0.22px;
+  letter-spacing: 0.14px;
   margin-top: -8px;
 }
 
