--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  min-width: 1200px;
+  min-width: 960px;
 
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 16px;
@@ -135,8 +135,9 @@ a {
 
 .search-form input:hover,
 .search-form input:hover + input {
-  background-color: #212a3a;
+  background-color: #212a3a;  
   opacity: 1;
+
 }
 
 .search-form input:focus {
@@ -239,6 +240,9 @@ a {
   height: 42px;
   width: 150px;
   border: none;
+  text-align: center;
+  line-height: 41px;
+  cursor: pointer;
 }
 
 .make-order:hover {
@@ -546,7 +550,6 @@ a {
 .slider {
   width: 620px;
   height: 266px;
-  margin-top: -1px;
   position:relative;
   padding-left: 40px;
   margin-left: -40px;
@@ -749,19 +752,17 @@ a {
   justify-content: center; 
   align-items: center; 
   margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
-  min-width: 190px;
-  height: 170px;
 }
 
 .popular ul li h3{
+  max-width: 190px;
   font-size: 18px;
   font-weight: 700;
   line-height: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 9px;
+  padding-top: 16px;
+  letter-spacing: -1.4px;
   color: black;
   margin: 0 auto;
 }
@@ -779,7 +780,7 @@ a {
   color: white;
   background-color: #ee3643;
   border-radius: 3px;
-  margin-top: -3px;
+  margin-top: -2px;
 }
 
 .actual-price::after {
@@ -959,7 +960,7 @@ a {
 }
 
 .services h2{
-  padding-top: 73px;
+  padding-top: 71px;
   padding-right: 130px;
   font-size: 30px;
   font-weight: 400;
@@ -968,12 +969,12 @@ a {
 
 .services p{
   padding-right: 130px;
-  padding-top: 7px;
+  padding-top: 9px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
-  max-width: 400px;
-  letter-spacing: 0.025px;
+  max-width: 410px;
+  letter-spacing: -0.33px;
 }
 
 .slider-options,
@@ -983,7 +984,7 @@ a {
 
 .slider-options {
   width: 240px;
-  margin-top: 58px;
+  margin-top: 57px;
   margin-right: 80px;
   padding: 0;
   position: relative;
@@ -1029,6 +1030,7 @@ a {
 .slider-content-item {
   position: absolute;
   width: 650px;
+  min-height: 300px;
   overflow: hidden;
 }
 
@@ -1044,7 +1046,6 @@ a {
 }
 
 .slider-content {
-  min-width: 670px;
   padding-top: 30px;
 }
 
@@ -1059,10 +1060,11 @@ a {
 .slider-content p {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;  
-  line-height: 25px;
-  padding:0;
-  max-width: 275px;
-  margin-top: -3px;
+  line-height: 24px;
+  padding: 0;
+  max-width: 280px;
+  letter-spacing: -0.4px;
+  margin-top: -1px;
 }
 
 .slider-content-1 {
@@ -1108,7 +1110,7 @@ a {
 .about {
   width: 940px;
   margin: 0 auto;
-  margin-top: 54px;
+  margin-top: 55px;
   margin-bottom: 67px;
   display: flex;
   flex-direction: row;
@@ -1130,22 +1132,23 @@ a {
   color: black;
   letter-spacing: 0.1px;
   font-weight: 400;
+  margin-bottom: 34px;
 }
 
 .about p {    
   margin: 0;
-  padding-bottom: 20px;
+  padding-bottom: 24px;
   max-width: 522px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
-  line-height: 27px;
-  letter-spacing: 0.14px;
+  line-height: 24px;
+  letter-spacing: -0.32px;
 }
 
 .about p:nth-child(3) {    
   max-width: 400px;
-  line-height: 25px;
-  letter-spacing: 0.04px;
+  line-height: 24px;
+  letter-spacing: -0.4px;
 }
 
 
@@ -1154,7 +1157,7 @@ a {
   font-size: 18px;
   line-height: 40px;
   margin: 0;
-  margin-top: -10px;
+  margin-top: -13px;
   list-style: none;
   padding-left: 35.9px;
   letter-spacing: 0.1px;
@@ -1185,7 +1188,7 @@ a {
   text-transform: uppercase;
   color: white;
   background-color: #ee3643;
-  margin-top: 27px;
+  margin-top: 26px;
   min-width: 220px;
 }
 
@@ -1209,7 +1212,7 @@ a {
 
 .about-contacts p {
   max-width: 220px;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
 }
 
 .map img {
@@ -1223,7 +1226,7 @@ a {
   text-transform: uppercase;
   color: white;
   background-color: #ee3643;
-  margin-top: -6px;
+  margin-top: -5px;
   min-width: 300px;
 }
 
@@ -1598,7 +1601,17 @@ a {
   margin-right: 42px;
   position: relative;
   display: inline-block;
+
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 12px;
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: -0.2px;
+  line-height: 18px;
+  color: black;
+  text-transform: uppercase;
 }
+
 
 .catalog-navigation ul li:nth-of-type(1) {
   margin-right: 40px;
@@ -1610,7 +1623,7 @@ a {
   height: 13px;
 }
 
-.catalog-navigation ul:before {
+.home:before {
   content:"";
   position: absolute;
   background: url("../img/icon-home.svg") no-repeat;
@@ -1619,7 +1632,7 @@ a {
   top: 2px;
   left: -2px;
   cursor: pointer;
-  z-index: 0;
+  z-index: 2;
 }
 
 .catalog-navigation ul li::before {
@@ -1638,10 +1651,6 @@ a {
 
 
 .catalog-navigation a{
-  font-family: "PT Sans", Arial, sans-serif;
-  font-size: 13px;
-  color: black;
-  text-transform: uppercase;
 }
 
 .catalog-current-page {
@@ -1794,8 +1803,8 @@ a {
   border: 1px solid #e5e5e5;
   border-radius: 3px;
   vertical-align: top;
-  margin-top: 30px;
-  letter-spacing: 0.5px;
+  margin-top: 34px;
+  letter-spacing: -0.4px;
   padding: 11px 38px;
   cursor: pointer;
 }
@@ -1810,6 +1819,7 @@ a {
   line-height: 38px;
   padding-left: 20px;
   margin-top: 0;
+  letter-spacing: -0.6px;
 }
 
 .price-controls label input{
@@ -1826,6 +1836,7 @@ a {
   color: black;
   text-transform: uppercase;
   font-weight: 700;
+  letter-spacing: -1.3px;
 }
 
 .brand-filter label,
@@ -1849,6 +1860,7 @@ a {
 .type-filter ul {
   list-style: none;
   padding-left: 0;
+  margin-top: 14px;
 }
 
 input[type="checkbox"] {
@@ -1862,6 +1874,7 @@ input[type="checkbox"] + label {
   line-height: 22px;
   position: relative;
   cursor: pointer;
+  letter-spacing: -0.9px;
 }
 
 input[type="checkbox"] + label::before {
@@ -1901,6 +1914,7 @@ input[type="radio"] + label {
   line-height: 22px;
   position: relative;
   cursor: pointer;
+  letter-spacing: -1.1px;
 }
 
 input[type="radio"] + label::before  {
@@ -1970,12 +1984,14 @@ input[type="radio"]:disabled + label {
   font-weight: 400;
   width: 170px;
   padding-left: 20px;
+  letter-spacing: -1.0px;
 }
 
 .sort-list a {
   color: #acaaa5;
   border-bottom: 1px dotted #ee3643; 
   margin-right: 69px;
+  letter-spacing: -1px;
 }
 
 .sort-list a:hover {
@@ -1994,7 +2010,7 @@ input[type="radio"]:disabled + label {
   height: 11px;
   display: block;
   opacity: 0.2;
-  margin-left: 3px;
+  margin-left: 9px;
   margin-right: -10px;
   border-bottom: none;
 }
@@ -2064,7 +2080,7 @@ input[type="radio"]:disabled + label {
   justify-content: flex-end; 
   align-items: center; 
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 20.9px;
   position: relative;
 }
 
@@ -2088,9 +2104,11 @@ input[type="radio"]:disabled + label {
   line-height: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 10px;
+  padding-top: 13px;
+  letter-spacing: -1.4px;
   color: black;
   margin: 0 auto;
+  max-width: 190px;
 }
 
 .pages {
@@ -2174,12 +2192,12 @@ input[type="radio"]:disabled + label {
   font-size: 13px;
   line-height: 24px;
   max-width: 940px;
-  letter-spacing: 0.02px;
+  letter-spacing: -0.41px;
   margin-bottom: 0;
 }
 
 .about-type p:nth-child(3) {
-  letter-spacing: 0.14px;
+  letter-spacing: -0.3px;
   margin-top: -8px;
 }
 
@@ -2195,12 +2213,14 @@ input[type="radio"]:disabled + label {
   box-shadow: -2px 1px 26px 3px rgba(0,0,0,0.75);
   display: none;
   z-index: 1000;
-  margin-left: 33%;
-  margin-right: 33%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
 .modal-feedback {
-  top: 327px;
   width: 620px;
   height: 430px;
 }
@@ -2332,18 +2352,16 @@ input[type="radio"]:disabled + label {
 }
 
 .modal-map {
-  top: 327px;
   width: 940px;
   height: 446px;
   background: url(../img/full_map.png);
   box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
-  margin-left: 25%;
 }
 
 .modal-cart {
   background-color: white;
-  top: 411px;
   width: 620px;
+  height: 282px;
 }
 
 .modal-cart h2 {
