--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,16 @@ a {
   opacity: 1;
 }
 
+
+.search-form input[type="submit"]:hover {
+  background-color: transparent;  
+  opacity: 0.3;
+}
+
 .search-form input:hover,
 .search-form input:hover + input {
   background-color: #212a3a;  
   opacity: 1;
-
 }
 
 .search-form input:focus {
@@ -1109,6 +1114,7 @@ a {
   width: 240px;
   margin-top: 57px;
   margin-right: 80px;
+  margin-left: -40px;
   padding: 0;
   position: relative;
 }
@@ -1152,14 +1158,12 @@ a {
 }
 
 .slider-content-item {
-  position: absolute;
   width: 650px;
   min-height: 300px;
   overflow: hidden;
 }
 
 .slider-services {
-  padding-right: 130px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1167,7 +1171,7 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding-bottom: 87px;
+  padding-bottom: 11px;
 }
 
 .slider-content-list {
@@ -2005,7 +2009,7 @@ a {
   border: 1px solid #e5e5e5;
   border-radius: 3px;
   vertical-align: top;
-  margin-top: 34px;
+  margin-top: 48px;
   letter-spacing: -0.4px;
   padding: 11px 38px;
   cursor: pointer;
@@ -2045,7 +2049,7 @@ a {
 .type-filter label {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 15px;
-  line-height: 20px;
+  line-height: 24px;
   color: black;
   text-transform: uppercase;
   padding-left: 0;
@@ -2062,17 +2066,21 @@ a {
 .type-filter ul {
   list-style: none;
   padding-left: 0;
-  margin-top: 14px;
+  margin-top: -3px;
+}
+
+.brand-filter ul {
+  margin-bottom: 35px;
 }
 
 input[type="checkbox"] {
-  display:none;
+  visibility: hidden;
 }
 
 input[type="checkbox"] + label {
   display: block;
   padding-left: 34px;
-  padding-bottom: 18px;
+  padding-bottom: 2px;
   line-height: 22px;
   position: relative;
   cursor: pointer;
@@ -2107,13 +2115,13 @@ input[type="checkbox"]:disabled + label {
 }
 
 input[type="radio"] {
-  display:none;
+  visibility: hidden;
 }
 
 input[type="radio"] + label {
   display: block;
   padding-left: 34px;
-  padding-bottom: 18px;
+  padding-bottom: 2px;
   line-height: 22px;
   position: relative;
   cursor: pointer;
