--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 @font-face {
   font-family: "Cuprum";
   src: url(../fonts/Cuprum/Cuprum-Bold.ttf);
-  font-style: bold;
   font-weight: 700;
 }
 
@@ -32,7 +31,6 @@
 @font-face {
   font-family: "Cuprum";
   src: url(../fonts/Cuprum/cuprumbold.woff2);
-  font-style: bold;
   font-weight: 700;
 }
 
@@ -101,6 +99,7 @@ a {
 .container {
   width: 940px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .main-header {
@@ -136,6 +135,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: visible;
 }
 
 .top-menu a {
@@ -825,7 +825,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 33px;
+  margin-top: 34px;
 
 }
 
@@ -976,6 +976,7 @@ a {
   position: absolute;
   padding: 45px 0;
   width: 100%;
+  box-sizing: border-box;
   top: 0;
   left: 0;
 }
@@ -1116,6 +1117,7 @@ a {
 }
 
 .brands-list li a {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -1138,11 +1140,11 @@ a {
 .services { 
   color: black;
   background-color: #f4f8fa;
-  margin-top: 69px;
+  margin-top: 53px;
 }
 
 .services h2{
-  padding-top: 73px;
+  padding-top: 47px;
   padding-right: 130px;
   font-size: 30px;
   font-weight: 400;
@@ -1151,7 +1153,7 @@ a {
 
 .services p{
   padding-right: 130px;
-  padding-top: 10px;
+  padding-top: 8px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
@@ -1166,7 +1168,7 @@ a {
 
 .slider-options {
   width: 240px;
-  margin-top: 54px;
+  margin-top: 57px;
   margin-left: -40px;
   padding: 0;
   position: relative;
@@ -1244,7 +1246,7 @@ a {
   font-weight: 400;
   color: #32425c;
   text-transform: uppercase;
-  margin-top: 32px;
+  margin-top: 35px;
   letter-spacing: 0.4px;
 }
 
@@ -1299,8 +1301,7 @@ a {
 .about {
   width: 940px;
   margin: 0 auto;
-  margin-top: 55px;
-  margin-bottom: 67px;
+  margin-top: 57px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1623,6 +1624,7 @@ a {
   background-image: url('../img/icon-vk.svg');
   background-position: center;
   background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
 .fb {
@@ -1632,6 +1634,7 @@ a {
   background-image: url('../img/icon-fb.svg');
   background-position: center;
   background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
 .insta {
@@ -1641,6 +1644,7 @@ a {
   background-image: url('../img/icon-insta.svg');
   background-position: center;
   background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
 .social ul li a:hover {
@@ -2330,6 +2334,7 @@ input[type="radio"]:focus + label {
   display: block;
   height: 11px;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .sort-list li .icon-up {
@@ -2475,14 +2480,14 @@ input[type="radio"]:focus + label {
 }
 
 .about-type {
-  margin-top: 43px;
+  margin-top: 44px;
   padding-bottom: 68px;
   color: black;
   background-color: #f2f6f8;
 }
 
 .about-type h2 {
-  padding-top: 73px;
+  padding-top: 47px;
   font-weight: 400;
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
